Fix Color Flash on iOS

--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-/* Default CSS variables - these will be overridden by JS before render */
-html {
+/* Default CSS variables - these will be overridden by JS in the head before render */
+:root {
   --frontend-header-bg: #13091f;
   --frontend-bg-color: #0f051d;
   --frontend-accent-color: #ff00ff;
